updating place
